# digital-human-rag-agent

./: .gitignore  .gitmodules  Makefile  README.md  download_models.sh  pyproject.toml
SadTalker/src/: generate_batch.py
SadTalker/src/face3d/: extract_kp_videos_safe.py
SadTalker/src/utils/: face_enhancer.py
docs/: technical_overview.md
output/temp_results/2025_07_06_15.46.00/: source_image##audio.mat  source_image##audio.txt
output/temp_results/2025_07_06_15.46.00/first_frame_dir/: source_image.mat  source_image_landmarks.txt
output/temp_results/2025_07_06_15.52.17/: source_image##audio.mat  source_image##audio.txt
output/temp_results/2025_07_06_15.52.17/first_frame_dir/: source_image.mat  source_image_landmarks.txt
output/temp_results/2025_07_06_16.18.07/: source_image##audio.mat  source_image##audio.txt
output/temp_results/2025_07_06_16.18.07/first_frame_dir/: source_image.mat  source_image_landmarks.txt
prompts/: image_prompt.txt
src/: audio_generator.py  config.py  image_generator.py  llm.py  main.py  progress.py  video_generator.py
static/: main.js  styles.css
templates/: index.html
