[tool.poetry]
name = "digital-human-rag-agent"
version = "0.1.0"
description = "A simple digital human agent using SadTalker and local LLMs."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
ollama = "^0.2.0"
diffusers = "^0.27.2"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
gtts = "^2.5.1"
transformers = "^4.38.0"
accelerate = "^0.30.1"

# Dependencies from SadTalker
face_alignment = "==1.3.5"
imageio = "==2.19.3"
imageio-ffmpeg = "==0.4.7"
librosa = "==0.9.2"
numba = "*"
resampy = "==0.3.1"
pydub = "==0.25.1"
scipy = "==1.10.1"
kornia = "==0.6.8"
yacs = "==0.1.8"
pyyaml = "*"
joblib = "==1.1.0"
scikit-image = "==0.19.3"
basicsr = "==1.4.2"
facexlib = "==0.3.0"
gradio = "*"
gfpgan = "*"
av = "*"
safetensors = "*"
langchain-community = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 